--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 Pamela Manguerra
               </h1>
               <p class="wow animate__animated animate__fadeInLeft">
-                Real Estate Broker
+                Operations Manager
               </p>
               <h2 class="wow animate__animated animate__fadeInRight">
                 18351 Beach Blvd d, USA
@@ -120,35 +120,7 @@
             </div>
           </div>
         </section>
-        <!-- image slider area start -->
-        <section
-          id="image_slider_area"
-          class="wow animate__animated animate__bounceInUp"
-        >
-          <!-- Swiper -->
-          <div class="swiper mySwiper">
-            <div class="swiper-wrapper">
-              <div class="swiper-slide">
-                <img src="img/slider/01.webp" alt="" />
-              </div>
-              <div class="swiper-slide">
-                <img src="img/slider/02.webp" alt="" />
-              </div>
-              <div class="swiper-slide">
-                <img src="img/slider/03.webp" alt="" />
-              </div>
-              <div class="swiper-slide">
-                <img src="img/slider/04.webp" alt="" />
-              </div>
-              <div class="swiper-slide">
-                <img src="img/slider/05.webp" alt="" />
-              </div>
-            </div>
-            <div class="swiper-button-next"></div>
-            <div class="swiper-button-prev"></div>
-          </div>
-        </section>
-        <!-- image slider area end -->
+
         <!-- google map -->
         <section
           id="google_map"
