--- a/index.html
+++ b/index.html
@@ -135,11 +135,7 @@
           ></iframe>
         </section>
         <section id="contact_form_area">
-          <form
-            action="https://formspree.io/f/xzbwowgp"
-            method="post"
-            onsubmit="return false"
-          >
+          <form action="https://formspree.io/f/xwkddvjj" method="POST">
             <h2>Contact Us</h2>
             <input
               class="wow animate__animated animate__fadeInUp"
@@ -190,31 +186,38 @@
             <ul>
               <li class="wow animate__animated animate__bounceIn">
                 <a
-                  href="https://facebook.com/Brown-Harris-Stevens-170402983005736/"
+                  href="https://www.facebook.com/Tax-Resolution-Group-490261004812353/"
                   ><img src="img/icons/facebook.png" alt="" /><span
                     >Facebook</span
                   ></a
                 >
               </li>
               <li class="wow animate__animated animate__bounceIn">
-                <a href="https://www.instagram.com/brownharrisstevens/"
+                <a href="https://www.linkedin.com/company/tax-resolution-group/"
+                  ><img src="img/icons/linkedin.png" alt="" /><span
+                    >Linkedin</span
+                  ></a
+                >
+              </li>
+              <li class="wow animate__animated animate__bounceIn">
+                <a href="https://www.instagram.com/taxresgroup/"
                   ><img src="img/icons/instagram.png" alt="" /><span
                     >Instagram</span
                   ></a
                 >
               </li>
               <li class="wow animate__animated animate__bounceIn">
-                <a href="https://twitter.com/bhsworldwide"
-                  ><img src="img/icons/twitter.png" alt="" /><span
-                    >Twitter</span
+                <a
+                  href="https://www.youtube.com/channel/UC42SMApNAyHma_8fD5oDLbA"
+                  ><img src="img/icons/youtube.png" alt="" /><span
+                    >Youtube</span
                   ></a
                 >
               </li>
               <li class="wow animate__animated animate__bounceIn">
-                <a href="https://wa.link/ixwqfk"
-                  ><img src="img/icons/whatsapp.png" alt="" /><span
-                    >Whatsapp</span
-                  ></a
+                <a
+                  href="https://www.yelp.com/biz/tax-resolution-group-huntington-beach"
+                  ><img src="img/icons/yelp.png" alt="" /><span>Yelp</span></a
                 >
               </li>
             </ul>
