--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
                 Operations Manager
               </p>
               <h2 class="wow animate__animated animate__fadeInRight">
-                18351 Beach Blvd d, USA
+                18351 Beach Blvd, <br />
+                Suite D, Huntington Beach, CA 92648
               </h2>
             </div>
           </div>
@@ -102,8 +103,8 @@
                 <a href="tel:949-413-3810">949-413-3810</a>
               </li>
               <li class="wow animate__animated animate__fadeInUp">
-                <label for="">Office</label>
-                <a href="tel:714-657-3155">714-657-3155</a>
+                <label for="">Fax</label>
+                <a href="tel:949-612-0284">949-612-0284</a>
               </li>
               <li class="wow animate__animated animate__fadeInDown">
                 <label for="">Email</label>
